@@ -3,6 +3,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.7
 
+	- cupsctl would crash if the scheduler was not running
+	  (STR #2741)
 	- The scheduler could crash when printing using a port
 	  monitor (STR #2742)
 	- The scheduler would crash if PAM was broken (STR #2734)
